--- a/src/solution.template
+++ b/src/solution.template
@@ -1,7 +1,7 @@
 use crate::errors::AoCError;
 use crate::reader::read_lines;
 
-pub fn run(input: &str) -> Result<(), AoCError> {
+pub fn run(input: String) -> Result<(), AoCError> {
     let lines = read_lines(input)?;
     for line in lines.into_iter().flatten() {
         println!("{}", line)
