--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "aoc2022"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[workspace]
 
 [dependencies.clap]
 version = "4.4.7"
@@ -11,6 +11,9 @@ features = ["derive"]
 
 [dependencies.color-eyre]
 version = "0.6.2"
+
+[dependencies.dyn_sol]
+path = "crates/dyn_sol"
 
 [dependencies.itertools]
 version = "0.11.0"
